# 12_Crowler_Search_Engine

./: .gitignore  README.md  crowler.sql
CMake/: CMakeLists.txt  CMakeSettings.json
CMake/_crowler_project/: CMakeLists.txt  crowler.ini  main.cpp
CMake/_search_engine_project/: CMakeLists.txt
CMake/_search_engine_project/html_css/: result_page_1.html  style.css
CMake/_sources/crowler/: crowler.cpp
CMake/_sources/crowler_database/: crowler_database.h
CMake/_sources/http_server_coro/: http_server_coro.cpp  http_server_coro.h
CMake/_sources/parser_ini_file/: parser_ini_file.cpp
CMake/_sources/safe_queue/: safe_queue.cpp
CMake/_sources/thread_pool/: thread_pool.cpp
CMake/pqxx_libs/DLL_Debug/: pqxx.exp
CMake/pqxx_libs/DLL_Release/: pqxx.exp
MSVS/: crowler.sln  search_engine.sln
MSVS/_crowler_project/: crowler.vcxproj  crowler.vcxproj.filters
MSVS/_search_engine_project/: main.cpp  search_engine.ini  search_engine.vcxproj  search_engine.vcxproj.filters
MSVS/_search_engine_project/html_css/: result_page_2.html  result_page_3.html  search_page.html
MSVS/_sources/crowler/: crowler.cpp  crowler.h
MSVS/_sources/crowler_database/: crowler_database.cpp
MSVS/_sources/parser_ini_file/: parser_ini_file.h
MSVS/_sources/safe_queue/: safe_queue.h
MSVS/_sources/thread_pool/: thread_pool.h
MSVS/pqxx_headers/pqxx/: config-public-compiler.h
MSVS/pqxx_libs/DLL_Release/: pqxx.lib
